--- a/05week/in-class-execises/css-grids-2/css/grid-auto-placement.css
+++ b/05week/in-class-execises/css-grids-2/css/grid-auto-placement.css
@@ -29,7 +29,7 @@ padding: 20px;
 }
 
 .item-1 {
-  /* background: #b03532; */
+  background: #b03532;
   grid-row-start: 1;
   grid-column-end: span 2;
   grid-column-start: 1;
