--- a/06week/Holiday_Brutalist/CSS/style.css
+++ b/06week/Holiday_Brutalist/CSS/style.css
@@ -100,14 +100,16 @@ li.jones {
   display: grid;
   grid-area: box2;
   grid-column: 1 / span 4;
-  grid-row: 5 / span 2;
+  grid-row:  / span 2;
   color: pink;
   /* border: 2px solid yellow; */
   font-size: 35px;
 }
 p.coding {
-  margin-top: 10px;
+  margin-top: 50px;
   font-family: 'Charm', cursive;
+  font-size: 20vw;
+  color: white;
 
 }
 
@@ -120,8 +122,10 @@ p.coding {
   font-size: 35px;
 }
 p.girls {
-  margin-top: 10px;
+  margin-top: 50px;
   font-family: 'Charm', cursive;
+  font-size: 20vw;
+  color: white;
 }
 .box4 {
   display: grid;
@@ -155,7 +159,7 @@ hr.box5 {
   align-content: center;
   grid-area: box7;
   grid-column: 2 / span 3;
-  grid-row: 8 / span 3;
+  grid-row: 5 / span 3;
   background: linear-gradient(160deg,#d74848,#dc3e58,#e13267,#ca677f,#949b9e,#4cbbbf,#3ac7de,#00d3ff);;
   transform: skew(20deg, 10deg);
   border: 2px groove orangered;
@@ -169,7 +173,7 @@ a.diagonal1 {
   display: grid;
   grid-area: box7;
   grid-column: 9 / span 3;
-  grid-row: 8 / span 3;
+  grid-row: 5 / span 3;
   background: linear-gradient(160deg,#ffeb00,#ffb820,#ff8748,#ff5e69,#dd4582,#a43f8e,#623e8a,#0c3776);;
   transform: skew(-20deg, -10deg);
   border: 2px groove orangered;
@@ -183,13 +187,14 @@ a.diagonal2 {
 .box6 {
   display: none;
 }
+
 @media(min-width: 766px) {
-  p.coding {
+  /* p.coding {
     font-size: 80px;
   }
   p.girls {
     font-size: 80px;
-  }
+  } */
   header {
     display: flex;
     justify-content: center;
@@ -222,9 +227,10 @@ a.diagonal2 {
     color: white;
   }
 }
+@media
 @media(min-width: 1000px) {
-  p.coding {
-    font-size: 380px;
+  /* p.coding {
+    font-size: 380px; */
   }
   .box2 {
     display: grid;
@@ -234,9 +240,9 @@ a.diagonal2 {
     color: pink;
     z-index: 1;
   }
-  p.girls {
+  /* p.girls {
     font-size: 380px;
-  }
+  } */
   .box3 {
     display: grid;
     grid-area: box2;
@@ -255,7 +261,7 @@ a.diagonal2 {
     grid-row: 1 / 10;
   }
   img.box6 {
-    width: 100%;
-    height: 100%;
+    width: 20vh;
+    height: 50vh;
   }
 }
