--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,25 +1,52 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial');
+@import url('https://fonts.googleapis.com/css?family=B612|Lobster|Varela+Round');
+/* font-family: 'Lobster', cursive;
+font-family: 'B612', sans-serif;
+font-family: 'Varela Round', sans-serif;
+ */
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Questrial', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
-/* font-family: 'Questrial', sans-serif; */
 body {
   width: 100%;
   height: 100%;
 }
 header {
   width: 100%;
-  height: 5%;
-  background: red;
+  height: 8vh;
+  background: rgb(231, 140, 170);
+  background-image: url(https://images.unsplash.com/photo-1524835391568-32c8f7016d73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: contain;
   text-align: center;
+  font-weight: 800;
+  color: ;
 }
 nav {
   width: 100%;
   height: 10%;
-  background: yellow;
+  background: rgb(231, 140, 170);
+  color: white;
+  border-top: 3px double white;
+  display: flex;
+}
+p.nav {
+  font-family: 'B612', sans-serif;
+  font-size: 4vh;
+  display: inline-block;
+  height: 100%;
+}
+#hamburger {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  height: 100%;
+  border: 1px solid black;
+}
+.top {
+  background: white;
+  
 }
 main {
   width: 100%;
@@ -35,7 +62,8 @@ main {
 .right {
   height: 60%;
   width: 100%;
-  background: yellow;
+  background: rgb(231, 140, 170);
+
 }
 hr {
   width: 100%;
@@ -49,6 +77,8 @@ hr {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
+  grid-gap: 1em;
+  background: white
 }
 .box1 {
   display: grid;
