--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -21,7 +21,13 @@ header {
   background-size: contain;
   text-align: center;
   font-weight: 800;
-  color: ;
+  font-size: 3vh;
+}
+p.header {
+  float: left;
+}
+p.header2 {
+  font-size: 1.5vh;
 }
 nav {
   width: 100%;
@@ -30,12 +36,34 @@ nav {
   color: white;
   border-top: 3px double white;
   display: flex;
+  position: relative;
+  align-content: center;
 }
-p.nav {
-  font-family: 'B612', sans-serif;
-  font-size: 4vh;
-  display: inline-block;
-  height: 100%;
+.spin {
+  width: 50px;
+  height: 50px;
+  border: 2px solid red;
+  border-radius: 50% 50%;
+  /* animation: spin 1s infinite linear; */
+  background: linear-gradient(160deg,#ea0d0d,#fa1588,#c46de1,#5c9fff,#00a6e3,#008d9c,#006e53,#204e17);
+  margin-top: 
+}
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+a.nav1 {
+  color: red;
+  font-size: 3vh;
+  padding: 4%;
+  /* position: absolute;
+  bottom: 1; */
+}
+a.nav2 {
+  color: red;
+  font-size: 3vh;
+  padding: 4%;
+  
 }
 #hamburger {
   display: flex;
@@ -43,10 +71,47 @@ p.nav {
   width: 25%;
   height: 100%;
   border: 1px solid black;
-}
-.top {
-  background: white;
+  justify-content: center;
+  position: absolute;
+  right: 5;
   
+  
+}
+ul.hamburger {
+  list-style: none;
+}
+li.ham {
+  background: white;
+  height: 20%;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 40px;
+  position: absolute;
+  animation: hover 3s ease;
+}
+
+li.top {
+  margin-bottom: 3px;
+  top: 3;
+}
+ul:hover :nth-child(1) {
+  transform: rotate(30deg);
+  top: 50;
+}
+.middle {
+  margin-bottom: 3px;
+  top: 25
+}
+ul:hover :nth-child(2) {
+  transform: rotate(90deg);
+  top: 50;
+}
+.bottom {
+  bottom: 3
+}
+ul:hover :nth-child(3) {
+  transform: rotate(-30deg);
+  top:50;
 }
 main {
   width: 100%;
@@ -54,10 +119,47 @@ main {
 .left {
   height: 60%;
   width: 40%;
-  background: blue;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   float: left;
-  color: white
+  color: white;
+  border: 5px solid blue;
+  background-image: url(http://pngimg.com/uploads/barbwire/barbwire_PNG18866.png);
+  background-size: contain;
+}
+#cards {
+  width: 50%;
+  height: 80%;
+  border: 2px solid gray;
+  background: blue;
+  box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+ul.cards {
+  list-style: none;
+  text-align: center;
+}
+li.cards {
+  background: gray;
+  height: 3vh;
+  width: 3vh;
+  border: 1px dotted pink;
+  animation: slideInLeft linear 6sec; 
+}
+@keyframes slideInLeft {
+  0% {
+    transform: translate(-150px)
+  }
+  50% {
+    transform: translate(-50px)
+  }
+  100% {
+    transform: translate(0px)
+  }
 }
 .right {
   height: 60%;
@@ -73,35 +175,64 @@ hr {
 #grid-wrapper {
   width: 100%;
   height: 40%;
-  background: green;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   grid-gap: 1em;
-  background: white
+  background-image: url(https://images.unsplash.com/photo-1508610048659-a06b669e3321?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: contain;
+
+
 }
 .box1 {
   display: grid;
   grid-area: box1;
-  grid-column: 2 / span 5;
-  grid-row: 2 / span 10;
-  background: orangered
+  grid-column: 9 / -1;
+  grid-row: 2 / -1;
+  border: 1px solid gray;
+  background: pink;
+}
+img.box1 {
+  width: 100%;
+  height: 100%;
 }
 .box2 {
   display: grid;
   grid-area: box2;
-  grid-column: 9 / -1;
-  grid-row: 2 / span 4;
+  grid-column: 2 / span 4 ;
+  grid-row: 1 / span 8;
   background: orange;
   border: 2px solid orangered
+}
+img.box2 {
+  width: 100%;
+  height: 100%;
 }
 .box3 {
   display: grid;
   grid-area: box3;
-  grid-column: 8 / 12;
-  grid-row:  6 / span 4;
+  grid-column: 5 / 11;
+  grid-row:  8 / -1;
   background: orange;
   border: 2px solid orangered;
+}
+img.box3 {
+  width: 100%;
+  height: 100%;
+}
+.box4 {
+  display: grid;
+  grid-area: box4;
+  grid-column: 1 / -1;
+  grid-row: 6 / 8;
+  font-family: 'B612', sans-serif;
+  color: white;
+  text-align: center
+}
+p.box4 {
+  font-weight: 800;
+  font-size: 4vh;
+  transform: rotate(-30deg)
 }
 footer {
   width: 100%;
@@ -117,8 +248,8 @@ aside {
   aside {
     display: inline;
     position: fixed;
-    width: 20%;
-    height: 100%;
+    width: 10%;
+    height: 80px;
     background: purple;
     z-index: 1;
     top: 0;
@@ -127,22 +258,37 @@ aside {
     padding-top: 20px;
     color: white;
   }
+  .box1 {
+    display: grid;
+    grid-area: box1;
+    grid-column: 1 / span 2;
+    grid-row: 1 / -1;
+    border: 1px solid gray;
+    background: pink;
+  }
   .box2 {
     display: grid;
     grid-area: box2;
-    grid-column: 8 / span 3;
-    grid-row: 2 / span 4;
+    grid-column: 8 / span 2 ;
+    grid-row: 5 / -1;
     background: orange;
-    border: 2px solid orangered;
-    overflow: scroll
+    border: 2px solid orangered
   }
   .box3 {
     display: grid;
     grid-area: box3;
-    grid-column: 8 / 12;
-    grid-row:  7 / span 4;
+    grid-column: 10 / -1;
+    grid-row:  1 / span 5;
     background: orange;
     border: 2px solid orangered;
-    overflow: scroll;
+  }
+}
+@media(min-width: 1000px){
+  li.ham {
+    width: 50%
+  }
+  li.middle {
+    position: absolute;
+    top: 35;
   }
 }
