--- a/myCheckpoint-two/css/style.css
+++ b/myCheckpoint-two/css/style.css
@@ -67,15 +67,14 @@ a.nav2 {
   padding: 4%;
   text-decoration: none;
 }
-a.nav1:active {
-  color: aqua
+a.nav1:visited {
+  color: aqua;
 }
 #hamburger {
   display: flex;
   flex-direction: column;
   width: 25%;
   height: 100%;
-  border: 1px solid black;
   justify-content: center;
   position: absolute;
   right: 5;
@@ -136,11 +135,19 @@ main {
  
 
 }
+p.email {
+  display: inline;
+  background: rgba(255, 255, 255, 0.616);
+}
+select {
+  background: chartreuse;
+  
+}
 #cards {
   width: 50%;
   height: 80%;
   border: 2px solid gray;
-  background: blue;
+  background: rgb(0, 0, 255);
   box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -212,9 +219,24 @@ img.love {
 }
 #brutalism {
   width: 100%;
-  height: 10%;
+  height: 20%;
   font-size: 3vh;
   text-align: center;
+  margin-bottom: 10px;
+}
+input#radio {
+  margin-bottom: 10px;
+  
+}
+button {
+  width: 100%;
+  height: 20%;
+  background: fuchsia;
+  color: white;
+  font-size: 5vh;
+  border: 5px solid white;
+  border-radius: 25px;
+  margin-top: 10px;
 }
 hr {
   width: 100%;
@@ -319,7 +341,7 @@ aside {
   .box2 {
     display: grid;
     grid-area: box2;
-    grid-column: 8 / span 2 ;
+    grid-column: 7 / span 3 ;
     grid-row: 5 / -1;
     background: orange;
     border: 2px solid orangered
@@ -332,6 +354,14 @@ aside {
     background: orange;
     border: 2px solid orangered;
   }
+}
+footer {
+  text-align: center;
+  font-size: 4vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 @media(min-width: 1000px){
   li.ham {
