--- a/myCheckpoint-two/css/style.css
+++ b/myCheckpoint-two/css/style.css
@@ -153,6 +153,7 @@ select {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-size: 3vh
 }
 ul.cards {
   list-style: none;
@@ -317,7 +318,7 @@ aside {
   display: none;
 }
 @media(min-width: 766px) {
-  aside {
+  /* aside {
     display: inline;
     position: fixed;
     width: 10%;
@@ -329,7 +330,8 @@ aside {
     overflow: scroll;
     padding-top: 20px;
     color: white;
-  }
+  } 
+  Decided were not doing aside...saving specs just incase*/
   .box1 {
     display: grid;
     grid-area: box1;
@@ -363,6 +365,34 @@ footer {
   justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+@media(min-width: 766px){
+  .box1 {
+    display:grid;
+    grid-area: box1;
+    grid-column: 1 / span 4;
+    grid-row: 1 / span 10;
+    border: 2px solid orangered;
+  }
+  .box2 {
+    grid-column: 6 / span 4
+  }
+  .box3 {
+    grid-column: 7 / -1;
+    grid-row: 1 / span 6
+  }
+  #rightbox {
+    font-size: 3vh;
+  }
+  select {
+    font-size: 3vh;
+  }
+  #brutalism {
+    margin-top: 20px;
+  }
+  .middle {
+    top: 40;
+  }
+}
 @media(min-width: 1000px){
   li.ham {
     width: 50%
@@ -370,5 +400,52 @@ footer {
   li.middle {
     position: absolute;
     top: 35;
+  }
+
+  p.header {
+    float: none;
+    display: inline-block;
+  }
+  p.header2 {
+    float: right;
+    margin-right: 30px;
+    font-size: 3vh;
+    display: inline-block;
+  }
+  nav {
+    text-align: center;
+  }
+  a.nav1, a.nav2 {
+    font-size: 4vh;
+    padding: 0;
+    margin-left: 50px;
+  }
+  .right {
+    padding: 0;
+  }
+  #rightbox {
+    width: 60vh;
+    height: 50vh;
+    background:rgb(46, 245, 245);
+    border: 2px solid chartreuse;
+    margin-top: 40px;
+  }
+  .box1 {
+    display:grid;
+    grid-area: box1;
+    grid-column: 1 / span 2;
+    grid-row: 1 / -1;
+    border: 2px solid orangered;
+  }
+  .box2 {
+    grid-column: 5 / span 2;
+    grid-row: 2 / -1
+  }
+  .box3 {
+    grid-column: 9 / span 4;
+    grid-row: 1 / span 9;
+  }
+  footer {
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   }
 }
