--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -1,24 +1,24 @@
 #top {
-  /* border: 2px solid red; */
-  text-align: center;
-  background-image: url("../img/brooke-lark-230140-unsplash.jpg");
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-  font-family: "Nanum Gothic";
-  font-size: 2em;
-  letter-spacing: .15em;
-  border: 1px solid black;
-
+    /* border: 2px solid red; */
+    text-align: right;
+    background-image: url("../img/brooke-lark-230140-unsplash.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    font-family: "Nanum Gothic";
+    font-size: 2em;
+    letter-spacing: .15em;
+    border: 1px solid #CCCCCC;
 }
 
-#title h2 {
+#title h1 {
   /* border: 2px solid red; */
-  font-size: .75em;
-  letter-spacing: .05em;
+  font-size: .9em;
+  letter-spacing: .04em;
+  margin: 2%;
 }
 
 #cart {
@@ -47,15 +47,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: .25em;
+  padding: .6em;
   /* border: 1px solid black; */
 }
 
+.items>h2 {
+    margin: 1%;
+}
+
+.items>p {
+    margin: 1%;
+}
+
 .pic {
-  width: 300px;
-  height: 200px;
-  border-radius: 5%;
-  /* border: 1px solid black; */
+    width: 225px;
+    height: 150px;
+    border-radius: 10px;
+    border: 1px solid #CCCCCC;
+    /* border: 1px solid black; */
 }
 .item-name {
   /* border: 1px solid black; */
@@ -63,4 +72,14 @@
 
 .description {
   /* border: 2px solid red; */
+}
+
+footer {
+    border-top: 1px solid #CCCCCC;
+    margin: 8px;
+    padding: 1%;
+    font-family: "Nanum Gothic", sans-serif;
+    font-size: 1em;
+    letter-spacing: .08em;
+    width: 97%;
 }
