--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -8,7 +8,7 @@
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
-    font-family: "Nanum Gothic";
+    font-family: 'Amatic SC', cursive;
     font-size: 2em;
     letter-spacing: .15em;
     border: 1px solid #CCCCCC;
@@ -16,17 +16,22 @@
 
 #title h1 {
   /* border: 2px solid red; */
-  font-size: .9em;
-  letter-spacing: .04em;
+  font-size: 1em;
+  letter-spacing: .2em;
   margin: 2%;
 }
 
 #cart {
-  font-family: "Nanum Gothic";
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+    font-family: 'Amatic SC', cursive;
+    letter-spacing: .15em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    border: 1px solid #CCCCCC;
+    width: 100%;
+    margin: 0;
+    border-top: none
 }
 
 #cart div {
@@ -34,10 +39,14 @@
 }
 
 #store {
-  font-family: "Nanum Gothic";
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+    font-family: 'Amatic SC', cursive;
+    letter-spacing: .15em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px solid #CCCCCC;
+    border-top:none;
+    width:100%;
 }
 
 .items {
@@ -52,13 +61,17 @@
 }
 
 .items>h2 {
-    margin: 1%;
+    margin: 1% 0 0 0;
 }
 
 .items>p {
     margin: 1%;
+    font-family: 'Open Sans', sans-serif;
 }
 
+.items > input {
+    font-family: 'Open Sans', sans-serif;
+}
 .pic {
     width: 225px;
     height: 150px;
@@ -75,11 +88,8 @@
 }
 
 footer {
-    border-top: 1px solid #CCCCCC;
     margin: 8px;
-    padding: 1%;
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     letter-spacing: .08em;
-    width: 97%;
 }
