quick font change

--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -66,11 +66,15 @@
 
 .items>p {
     margin: 1%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
+    font-weight:bold;
 }
 
 .items > input {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
+}
+.cart > button {
+    font-family: 'Work Sans', sans-serif;
 }
 .pic {
     width: 225px;
@@ -89,7 +93,7 @@
 
 footer {
     margin: 8px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 1em;
     letter-spacing: .08em;
 }
