--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,12 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Lora|Roboto');
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
+body{
+  background-color: #4b54bf;
+  background-color: #d1c9ff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(240)'%3E%3Cstop offset='0' stop-color='%23d1c9ff'/%3E%3Cstop offset='1' stop-color='%235979e6'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='540' height='450' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.1'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;  
+  background-attachment: fixed;
+  background-size: cover;  
+  /* cursor: cell; */
+  overflow-x: hidden;
+}
 .gridItem{
-  border: 3px solid black;
-  border-radius: 6px;
+  border: 2px solid black;
+  border-radius: 3px;
   color: #fff;
   font-size: 26px;
   display: flex;
@@ -14,68 +25,214 @@
   align-items: center;
 }
 .gridItem-1{
+  padding: 10px;
+  font-family: 'Roboto', sans-serif;
   grid-area: name;
-  background-color: palevioletred;
+  background-color: rgba(173, 216, 230, 0.836);
+  text-shadow: 2px 2px gold;
+}
+.gridItem-1:hover{
+  color: gold;
+  text-shadow: 2px 2px #fff;
 }
 .gridItem-2{
+  font-family: 'Roboto', sans-serif;
   grid-area: nav;
-  background-color: lightblue;
-  
+  padding: 5px;
+  background-color: rgba(177, 129, 255, 0.836);
 }
-.gridItem-2 a:first-of-type{
-  color: #008080;
+
+ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+}
+li:first-of-type{
+  color: gold;
+}
+li{
+  width: 23%;
+  margin: 0 15px;
+}
+li:hover a{
+    color: gold;
+}
+.gridItem-2{
+  display: inline-flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 .gridItem-3{
   grid-area: side1;
-  background-color: orange;
+  border: none;
+}
+.gridItem-3 img{
+  border-radius: 50%;
+  border: 2px solid black;
+  transition-duration: .5s;
+}
+.gridItem-3 img:hover{
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .gridItem-4{
+  padding: 15px;
   grid-area: about;
-  background-color: pink;
+  background-color: rgba(173, 216, 230, 0.536);
+  transition-duration: .5s;
 }
+.gridItem-4 p{
+  font-family: 'Lora', serif;
+}
+.gridItem-4 p:first-of-type{
+  font-family: 'Roboto', sans-serif;
+  text-decoration: underline;
+  text-shadow: 1px 1px gold;
+}
+/* .gridItem-4 span{
+  font-family: 'Dancing Script', cursive;
+  color: gold;
+} */
+.gridItem-4:hover {
+  background-color: rgba(173, 216, 230, 0.836) 
+ /* box-shadow: 5px 5px .5px  gold;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1); */
+}
+/* .gridItem-4:hover p:first-of-type{
+  color: orchid;
+  text-shadow: 2px 2px gold;
+} */
 .gridItem-5{
   grid-area: side2;
-  background-color: teal;
+  background-color: rgba(177, 129, 255, 0.836);
+  border-radius: 50%;
 }
 .gridItem-6{
   grid-area: my-work;
-  background-color: orchid;
+  padding: 5px;
+  /* background-color: rgba(177, 129, 255, 0.836); */
   justify-content: flex-start;
+  align-items: flex-end;
+  border: none;
+  border-bottom: 3px solid black;
 }
-.gridItem-6 h2{
-  margin: 0 15;
+.gridItem-6 p{
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
 }
 .gridItem-7{
   grid-area: proj1;
-  background-color: gold;
+  background-color: rgba(128, 128, 128, 0.596);
+  font-family: 'Lora', serif;
+  transition-duration: .5s;
+}
+.gridItem-7:hover{
+  background-color: rgba(128, 128, 128, 0.836);
+  /* border: 5px solid gold; */
+  /* color: black; */
+  -webkit-transform: scale(1.04);
+  -moz-transform: scale(1.04);
+  -o-transform: scale(1.04);
+  -ms-transform: scale(1.04);
+  transform: scale(1.04);
 }
 .gridItem-8{
   grid-area: proj2;
-  background-color: plum;
+  background-color: rgba(128, 128, 128, 0.596);
+  font-family: 'Lora', serif;
+  transition-duration: .5s;
+}
+.gridItem-8:hover{
+  background-color: rgba(128, 128, 128, 0.836);
+  /* color: black; */
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .gridItem-9{
   grid-area: proj3;
-  background-color: forestgreen;
+  background-color: rgba(128, 128, 128, 0.596);
+  font-family: 'Lora', serif;
+  transition-duration: .5s;
+}
+.gridItem-9:hover{
+  background-color: rgba(128, 128, 128, 0.836);
+  /* color: black; */
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .gridItem-10{
   grid-area: proj4;
-  background-color: maroon;
+  background-color: rgba(128, 128, 128, 0.596);
+  font-family: 'Lora', serif;
+  transition-duration: .5s;
+}
+.gridItem-10:hover{
+  background-color: rgba(128, 128, 128, 0.836);
+  /* color: black; */
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .gridItem-11{
   grid-area: proj5;
-  background-color: magenta;
+  background-color: rgba(128, 128, 128, 0.596);
+  font-family: 'Lora', serif;
+  transition-duration: .5s;
+}
+.gridItem-11:hover{
+  background-color: rgba(128, 128, 128, 0.836);
+  /* color: black; */
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .gridItem-12{
+  padding: 10px;
   grid-area: contact;
-  background-color: cyan;
+  /* background-color: #B281FF; */
+  border: none;
+  border-top: 3px solid black;
+  justify-content: flex-end;
+  font-family: 'Lora', serif;
+}
+.gridItem-12 p{
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  color: black;
+}
+.gridItem-12 a:hover{
+  color: gold;
 }
 a{
   text-decoration: none;
   color: inherit;
 }
 @media (min-width: 320px){
+  body{
+    overflow-x: hidden;
+  }
   .gridContainer{
-    margin: 0 10 0 10;
+    /* overflow-x: hidden; */
+    margin: 5 10 5 10;
     width: 90%;
     height: 100%;
     display: grid;
@@ -96,10 +253,23 @@ a{
     margin: 10px;
     font-size: 20px;
   }
+  .gridItem-4 p{
+    font-family: 'Lora', serif;
+    font-size: 15px;
+  }
+  .gridItem-4 p:first-of-type{
+    font-size: 20px;
+  }
+  .gridItem-2 a{
+    font-size: 13px;
+  }
+  .gridItem-2 li:hover a{
+    color: white;
+  }
 }
 @media (min-width: 768px){
   .gridContainer{
-    margin: 0 10 0 10;
+    margin: 7 10 7 10;
     width: 90%;
     height: 100%;
     display: grid;
@@ -121,7 +291,7 @@ a{
 }
 @media(min-width: 1025px){
   .gridContainer{
-    margin: 0 15 0 15;
+    margin: 10 15 10 15;
     width: 90%;
     height: 100%;
     display: grid;
@@ -129,21 +299,24 @@ a{
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 20% 50% 20% 25% 25% 20%;
     grid-template-areas: "name nav nav nav"
-                        "side1 about about side2"
+                        "side1 about about about"
                         "my-work my-work my-work my-work"
                         "proj1 proj1 proj2 proj3"
                         "proj1 proj1 proj4 proj5"
                         "contact contact contact contact"
-                        
+                  
   }
-  .gridItem-2 a:hover{
-    color: #008080;
+  .gridItem-4 p{
+    font-size: 20px;
+    line-height: 35px;
   }
-  .gridItem-2{
-    justify-content: flex-end;
-    align-items: flex-end;
+  .gridItem-4 p:first-of-type{
+    font-size: 30px;
   }
-  a{
-    margin: 0 35;
+  .gridItem-2 a{
+    font-size: 25px
+  }
+  .gridItem-2 li:hover a{
+    color: gold;
   }
 }
