made minor changes

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -12,7 +12,6 @@ body{
   background-size: cover;  
   background-attachment: fixed;
   background-size: cover;  
-  /* cursor: cell; */
   overflow-x: hidden;
 }
 .gridItem{
@@ -94,32 +93,18 @@ li:hover a{
   text-decoration: underline;
   text-shadow: 1px 1px gold;
 }
-/* .gridItem-4 span{
-  font-family: 'Dancing Script', cursive;
-  color: gold;
-} */
+
 .gridItem-4:hover {
   background-color: rgba(173, 216, 230, 0.836) 
- /* box-shadow: 5px 5px .5px  gold;
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1); */
+ 
 }
-/* .gridItem-4:hover p:first-of-type{
-  color: orchid;
-  text-shadow: 2px 2px gold;
-} */
+
 .gridItem-5{
   grid-area: side2;
-  background-color: rgba(177, 129, 255, 0.836);
-  border-radius: 50%;
 }
 .gridItem-6{
   grid-area: my-work;
   padding: 5px;
-  /* background-color: rgba(177, 129, 255, 0.836); */
   justify-content: flex-start;
   align-items: flex-end;
   border: none;
@@ -137,8 +122,6 @@ li:hover a{
 }
 .gridItem-7:hover{
   background-color: rgba(128, 128, 128, 0.836);
-  /* border: 5px solid gold; */
-  /* color: black; */
   -webkit-transform: scale(1.04);
   -moz-transform: scale(1.04);
   -o-transform: scale(1.04);
@@ -153,7 +136,6 @@ li:hover a{
 }
 .gridItem-8:hover{
   background-color: rgba(128, 128, 128, 0.836);
-  /* color: black; */
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
@@ -168,7 +150,6 @@ li:hover a{
 }
 .gridItem-9:hover{
   background-color: rgba(128, 128, 128, 0.836);
-  /* color: black; */
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
@@ -183,7 +164,6 @@ li:hover a{
 }
 .gridItem-10:hover{
   background-color: rgba(128, 128, 128, 0.836);
-  /* color: black; */
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
@@ -198,7 +178,6 @@ li:hover a{
 }
 .gridItem-11:hover{
   background-color: rgba(128, 128, 128, 0.836);
-  /* color: black; */
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
@@ -208,7 +187,6 @@ li:hover a{
 .gridItem-12{
   padding: 10px;
   grid-area: contact;
-  /* background-color: #B281FF; */
   border: none;
   border-top: 3px solid black;
   justify-content: flex-end;
@@ -231,7 +209,6 @@ a{
     overflow-x: hidden;
   }
   .gridContainer{
-    /* overflow-x: hidden; */
     margin: 5 10 5 10;
     width: 90%;
     height: 100%;
@@ -277,7 +254,7 @@ a{
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 20% 50% 20% 25% 25% 25% 20%;
     grid-template-areas: "name name nav nav"
-                        "side1 about about side2"
+                        "side1 about about about"
                         "my-work my-work my-work my-work"
                         "proj1 proj1 proj2 proj2"
                         "proj1 proj1 proj3 proj3"
