revised landing page

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ header {
   border: 4px solid black;
   margin: 25px;
   border-radius: 4px;
+  background: #e1eec3;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f05053, #e1eec3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f05053, #e1eec3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .weekly__projects {
   /* border: 2px solid black; */
