revised checkpoint-two

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -15,6 +15,7 @@ a {
   text-decoration: none;
   font-weight: 600;
   background-color: transparent;
+  color: #674172;
 }
 img {
   max-width: 100%;
@@ -158,6 +159,8 @@ section article h1, p {
   padding: 0 .1em;
 }
 
+
+/* desktop web-view */
 
 @media (min-width: 48em) {
   html {
