--- a/myCheckpoint-two/css/style.css
+++ b/myCheckpoint-two/css/style.css
@@ -276,7 +276,7 @@ hr {
   grid-area: box1;
   grid-column: 9 / -1;
   grid-row: 2 / -1;
-  border: 2px solid #974339;
+  border: 2px solid black;
   background: #974339;
 }
 img.box1 {
@@ -289,7 +289,7 @@ img.box1 {
   grid-column: 2 / span 4 ;
   grid-row: 1 / span 8;
   background: #974339;
-  border: 2px solid #974339;
+  border: 2px solid black;
 }
 img.box2 {
   width: 100%;
@@ -301,7 +301,10 @@ img.box2 {
   grid-column: 5 / 11;
   grid-row:  8 / -1;
   background: #974339;
-  border: 2px solid #974339;
+  border: 2px solid black;
+}
+.right i {
+  color: cornsilk;
 }
 img.box3 {
   width: 100%;
@@ -317,53 +320,6 @@ img.box3 {
   color: white;
   text-align: center
 }
-.box5 {
-  display: grid;
-  grid-area: box5;
-  grid-column: 2;
-  grid-row: 1 / -1;
-  border-right: 1px solid rgba(255, 255, 255, 0.39);
-  border-left: 1px solid rgba(255, 255, 255, 0.582);
-}
-.box6 {
-  display: grid;
-  grid-area: box6;
-  grid-column: 4;
-  grid-row: 1 / -1;
-  border-right: 1px solid rgba(255, 255, 255, 0.61);
-  border-left: 1px solid rgba(255, 255, 255, 0.582);
-}
-.box7 {
-  display: grid;
-  grid-area: box7;
-  grid-column: 6;
-  grid-row: 1 / -1;
-  border-right: 1px solid rgba(255, 255, 255, 0.61);
-  border-left: 1px solid rgba(255, 255, 255, 0.582);
-}
-.box8 {
-  display: grid;
-  grid-area: box8;
-  grid-column: 8;
-  grid-row: 1 / -1;
-  border-right: 1px solid rgba(255, 255, 255, 0.61);
-  border-left: 1px solid rgba(255, 255, 255, 0.582);
-}
-.box9 {
-  display: grid;
-  grid-area: box9;
-  grid-column: 10;
-  grid-row: 1 / -1;
-  border-right: 1px solid rgba(255, 255, 255, 0.61);
-  border-left: 1px solid rgba(255, 255, 255, 0.582);
-}
-.box10 {
-  display: grid;
-  grid-area: box10;
-  grid-column: 11;
-  grid-row: 1 / -1;
-  border-right: 1px solid rgba(255, 255, 255, 0.61);
-}
 p.box4 {
   font-weight: 800;
   font-size: 7vh;
@@ -373,9 +329,9 @@ p.box4 {
 footer {
   width: 100%;
   height: 10%;
-  background: red;
-  color: white;
-  border: 2px solid black;
+  background: black;
+  border: 2px solid;
+  color: #807063;
 }
 aside {
   display: none;
