--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -18,8 +18,8 @@ h1 {
     display: inline-grid;
     grid-template-columns: 100px 100px 100px 100px; 
     grid-template-rows: auto;
-    height: 40%;
-    width: 40%;
+    height: 50%;
+    width: 50%;
    
 }
 
@@ -44,14 +44,15 @@ h1 {
 
 .parent-container {
     border: 1px solid black;
-    font-display: 50px;
+    margin: 10px;
+    text-align: center;
     justify-content: center;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     display: inline-grid;
-    grid-template-columns: 100px 100px 100px 100px; 
+    grid-template-columns: 200px 200px 200px 200px; 
     grid-template-rows: auto;
-    height: 400px;
+    height: 100%;
     width: 100%;
     grid-template-areas:
     "header header header header"
@@ -60,4 +61,25 @@ h1 {
     "main main main sidebar"
     "footer footer footer footer"; 
 }
+nav {
+    border: 1px solid black;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    /* word-spacing: 25px; */
+    list-style-type: none;
+    /* display: block; */
+    /* color: white; */
+    text-align: center;
+    padding: 30px;
+    text-decoration: none;
+    padding-left: 25px;
+
+}
+li div {
+    padding: 20px;
+}
+
 }
