quick style update

--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -52,6 +52,7 @@ div[data-cell] {
     justify-content:flex-start;
     align-items: flex-start;
     width: 100%;
+    bottom: -1;
 }
 footer {
     margin: .5% 5% 0 5%;
