one more quick update

--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -13,7 +13,7 @@ body {
   flex-direction: column;
   align-items: center;
   border: 1px solid black;
-  padding: 1em 0;
+  padding: .5em 0;
   margin: 0 5%;
   width: 90%;
 }
@@ -23,7 +23,7 @@ header
   font-family: 'Amatic SC', cursive;
   border: 1px solid black;
   font-size: 3em;
-  padding: 1em 0;
+  padding: .25em 0;
   letter-spacing: .25em;
   margin: 2% 5% 2% 5%;
   text-align: center;
