--- a/checkpoints/checkpoint3/css/style.css
+++ b/checkpoints/checkpoint3/css/style.css
@@ -249,6 +249,9 @@ footer {
 
 
 @media (max-width: 550px){
+  #tracker3 p {
+    font-size: 1rem;
+  }
   header h1{
     font-size: 2.5em;
     margin: 0 2%;
