--- a/checkpoints/checkpoint3/css/style.css
+++ b/checkpoints/checkpoint3/css/style.css
@@ -188,13 +188,14 @@ header p {
   text-align: center;
   text-decoration: none;
   padding: .7em;
-  width: 100%;
+  width: 90%;
   max-width: 960px;
   font-family: 'Amatic SC', cursive;
   font-size: 1.8em;
   font-weight: bold;
   text-transform: lowercase;
   letter-spacing: .08em;
+  border-radius: none;
 }
 
 #playagain:hover {
@@ -219,14 +220,15 @@ body{
 @media (max-width: 959px){
   #announcewin {
     height: 70vh;
-    width: 480px; /* Full width*/
+    width: 90vh;
+    max-width: 480px; /* Full width*/
     background-size: cover;
     background-position: center;
 
 
   }
   #playagain{
-    width: 100vh;
+    width: 90vh;
     max-width:480px;
   }
 }
