working on mobile

--- a/checkpoints/checkpoint3/css/style.css
+++ b/checkpoints/checkpoint3/css/style.css
@@ -188,14 +188,14 @@ header p {
   text-align: center;
   text-decoration: none;
   padding: .7em;
-  width: 90%;
+  width: 100%;
   max-width: 960px;
   font-family: 'Amatic SC', cursive;
   font-size: 1.8em;
   font-weight: bold;
   text-transform: lowercase;
   letter-spacing: .08em;
-  border-radius: none;
+  border-radius: 0;
 }
 
 #playagain:hover {
@@ -219,8 +219,8 @@ body{
 
 @media (max-width: 959px){
   #announcewin {
-    height: 70vh;
-    width: 90vh;
+    height: 45vh;
+    width: 45vh;
     max-width: 480px; /* Full width*/
     background-size: cover;
     background-position: center;
@@ -228,7 +228,7 @@ body{
 
   }
   #playagain{
-    width: 90vh;
+    width: 45vh;
     max-width:480px;
   }
 }
