completed Towers of Hanoi game

--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+*{
+  font-family: 'Major Mono Display', monospace;
+}
+h2{
+  margin: 25px;
+}
 [data-stack] {
   display: flex;
   justify-content: flex-start;
@@ -10,6 +17,7 @@
 [data-block] {
   width: 25px;
   float: left;
+  border-radius: 12px;
 }
 
 [data-block="25"] {
@@ -31,8 +39,14 @@
   height: 100px;
   background-color: yellow;
 }
-
+.counter{
+  margin: 25px;
+}
+.clear{
+  margin: 0 25px;
+}
 #announce-game-won {
   font-size: 50px;
   text-align: center;
+  cursor: pointer;
 }
