--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -3,6 +3,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  background-image: url(https://images.unsplash.com/photo-1464938050520-ef2270bb8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: cover;
+}
 #wrapper {
   border: 3px solid black;
   width: 85vh;
@@ -19,6 +23,8 @@
 }
 #col1 {
   background: yellow;
+  align-content: center;
+  
 }
 #col2 {
    background: orange;
@@ -28,13 +34,13 @@
   float: right
 }
 
-ul.blocks {
+/* ul.blocks {
   position: absolute;
   bottom: 0;
   display: flex;
   list-style: none;
   flex-direction: column;
-}
+} */
 #block1 {
   width: 15px;
   height: 20px;
