working on color schemes

--- a/09week/myown-form/style.css
+++ b/09week/myown-form/style.css
@@ -10,27 +10,64 @@ header {
 nav {
   width: 100%;
   height: 15vh;
-  background: navy;
-  display: inline-block;
-  color: royalblue;
-  text-align: center;
-  font-size: 8vh;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  background:#1d2731;
+  display: flex;
+  justify-content: center;
+  color: whitesmoke;
+  font-size: 5vh;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
 }
 img.nav {
   width: 20%;
   height: 100%;
   float: left;
 }
+p.nav {
+  margin-left: 20px;
+}
 main {
-  background: navy;
+  background: #083c5d;
   width: 100%;
   height: 100%;
 
 }
 #form-container {
-  width: 50%;
-  height: 50%;
-  background: aqua;
+  width: 80%;
+  height: 80%;
+  background-image: url(https://images.unsplash.com/photo-1521452967839-27ce29d2820d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: cover;
+  background-position: center;
   margin: 0 auto;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+.form {
+  background: whitesmoke;
+  width: 50%;
+  height: auto;
+  align-self: center;
+}
+.submit {
+  border: 3px solid navy;
+  border-radius: 12px;
+  height: 5vh;
+  width: 17vw;
+  margin-top: 5px;
+}
+#spacing {
+  color: black;
+}
+#controls {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  background: #ffbb39;
 }
